# poly-arb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  alembic.ini  compose.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
deploy/: prometheus.yml
deploy/alerting/: rules.yaml
deploy/dashboards/: execution.json  overview.json  providers.json
docs/: CODEBASE.md
encoder/: Dockerfile  app.py  requirements.txt
polyarb/: __main__.py  cli.py  colors.py  config.py  fees.py  models.py  sizing.py
polyarb/alerts/: base.py  console.py
polyarb/analysis/: __main__.py  backtest.py  costs.py  lifetime.py
polyarb/analytics/: __init__.py  performance.py  pnl.py  reports.py  signals.py
polyarb/api/: __init__.py  app.py  audit.py  openapi.py
polyarb/client/: __main__.py  api.py  cli.py  ws_listener.py
polyarb/config/: __init__.py  _config.py  secrets.py  settings.py
polyarb/daemon/: __main__.py  engine.py  routes.py  server.py  state.py
polyarb/data/: async_kalshi.py  async_live.py  base.py  kalshi.py  live.py  mock.py
polyarb/db/: __init__.py  engine.py  models.py
polyarb/engine/: multi.py  scanner.py  single.py
polyarb/execution/: async_kalshi.py  cross.py  executor.py  idempotency.py  journal.py  kalshi.py  orders.py  polymarket.py  positions.py  reconciliation.py  recovery.py  state_machine.py
polyarb/matching/: biencoder.py  encoder_client.py  matcher.py  normalize.py
polyarb/notifications/: approval.py  base.py  telegram.py
(+103 files in other folders)
