[project]
name = "polyarb"
version = "0.1.0"
description = "Polymarket arbitrage detection & semi-auto trading system"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["polyarb/tests"]
