[project]
name = "polyarb"
version = "0.2.0"
description = "Polymarket arbitrage detection & semi-auto trading system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "prometheus-client>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.24"]
postgres = ["asyncpg>=0.29", "aiosqlite>=0.20"]
trade = ["cryptography>=41.0"]
encoder = ["sentence-transformers>=2.2", "fastapi>=0.100"]

[tool.setuptools.packages.find]
include = ["polyarb*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["polyarb/tests"]
asyncio_mode = "auto"
